Optimize list subscription query (#1353)
1. The use of paginated querying of subscription was unnecessary in the the current code when used internally, hence subscription query generation code has been made to optionally accept Pagination params instead of mandatorily asking for it.
2. Currently, the check for listing subscriptions during deleting a eventtype is a 2 part process (involves calling select 2 times once when checking for subscription and other when deleting) which is not needed and could lead to inconsistent results. Now querying is done once then deletion both of them done inside a transaction.